--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
           class="fab fa-instagram"
         ></a>
         <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-whatsapp"></a>
+        <a href="https://wa.me/97452005623" class="fab fa-whatsapp"></a>
       </div>
 
       <div class="links">
@@ -1822,10 +1822,14 @@
     - #GO TO TOP
   -->
 
-    <a href="#top" class="go-top-btn" data-go-top>
-      <ion-icon name="arrow-up-outline"></ion-icon>
+    <a
+      href="https://wa.me/97452005623"
+      class="go-top-btn"
+      data-go-top
+      target="new"
+    >
+      <ion-icon name="logo-whatsapp"></ion-icon>
     </a>
-
     <!-- 
     - custom js link
   -->
