--- a/index.html
+++ b/index.html
@@ -1597,6 +1597,47 @@
     </main>
 
     <!-- 
+      - #CONTACT US
+    -->
+    <section class="contact" id="contact">
+      <h1 class="heading"><span>Contact</span> us</h1>
+
+      <div class="row">
+        <div class="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14431.068730211264!2d51.517735496696055!3d25.278416174200913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e45c534ffdce87f%3A0x44d9319f78cfd4b1!2sDoha%2C%20Qatar!5e0!3m2!1sen!2slk!4v1722402195330!5m2!1sen!2slk"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+
+        <form action="">
+          <h1 class="heading" style="color: #e0e1dd">Get in touch</h1>
+          <div class="inputBox">
+            <span class="fas fa-user"></span>
+            <input type="text" placeholder="name" />
+          </div>
+
+          <div class="inputBox">
+            <span class="fas fa-envelope"></span>
+            <input type="email" placeholder="email" />
+          </div>
+
+          <div class="inputBox">
+            <span class="fas fa-phone"></span>
+            <input type="number" placeholder="number" />
+          </div>
+          <button class="btn btn-primary">
+            <span>Contact Now</span>
+          </button>
+        </form>
+      </div>
+    </section>
+    <!-- 
     - #FOOTER
   -->
     <section class="footer">
@@ -1819,7 +1860,7 @@
     </footer> -->
 
     <!-- 
-    - #GO TO TOP
+    - #GO TO whatsapp
   -->
 
     <a
