--- a/index.html
+++ b/index.html
@@ -256,6 +256,22 @@
 
         <section class="section product">
           <div class="container">
+            <section class="footer">
+              <div class="share">
+                <a
+                  href="https://www.facebook.com/profile.php?id=61561941742228"
+                  class="fab fa-facebook-f"
+                ></a>
+                <a href="#" class="fab fa-tiktok"></a>
+                <a
+                  href="https://www.instagram.com/__brand_it/"
+                  class="fab fa-instagram"
+                ></a>
+
+                <a href="https://wa.me/97452005623" class="fab fa-whatsapp"></a>
+              </div>
+              <br /><br />
+            </section>
             <h2 class="h2 section-title">Bestsellers Products</h2>
 
             <ul class="filter-list">
@@ -297,7 +313,9 @@
                       class="image-contain"
                     />
 
-                    <div class="card-badge">New</div>
+                    <div class="card-badge">
+                      <button class="order">New</button>
+                    </div>
 
                     <ul class="card-action-list">
                       <li class="card-action-item">
@@ -373,7 +391,7 @@
                 <div class="product-card" tabindex="0">
                   <figure class="card-banner">
                     <img
-                      src="./assets/images/product-2.jpg"
+                      src="./assets/images/2.jpg"
                       width="312"
                       height="350"
                       loading="lazy"
@@ -438,12 +456,11 @@
 
                   <div class="card-content">
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Sports</a>
+                      <a href="#" class="card-cat-link">Women</a>
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Leather Mens Slipper</a>
+                      <a href="#">Swift Run 22 Shoes</a>
                     </h3>
 
                     <data class="card-price" value="190.85">QAR 140</data>
@@ -455,7 +472,7 @@
                 <div class="product-card" tabindex="0">
                   <figure class="card-banner">
                     <img
-                      src="./assets/images/product-3.jpg"
+                      src="./assets/images/3.jpg"
                       width="312"
                       height="350"
                       loading="lazy"
@@ -522,12 +539,11 @@
 
                   <div class="card-content">
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
                       <a href="#" class="card-cat-link">Women</a>
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Simple Fabric Shoe</a>
+                      <a href="#">Swift Run 22 Running </a>
                     </h3>
 
                     <data class="card-price" value="160.85">QAR 140</data>
@@ -539,7 +555,7 @@
                 <div class="product-card" tabindex="0">
                   <figure class="card-banner">
                     <img
-                      src="./assets/images/product-4.jpg"
+                      src="./assets/images/4.jpg"
                       width="312"
                       height="350"
                       loading="lazy"
@@ -547,7 +563,7 @@
                       class="image-contain"
                     />
 
-                    <div class="card-badge">-25%</div>
+                    <div class="card-badge">-50%</div>
 
                     <ul class="card-action-list">
                       <li class="card-action-item">
@@ -606,17 +622,12 @@
 
                   <div class="card-content">
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Sports</a>
+                      <a href="#" class="card-cat-link">Women</a>
                     </div>
-
                     <h3 class="h3 card-title">
-                      <a href="#">Air Jordan 7 Retro </a>
+                      <a href="#">Swift Run 22 Running </a>
                     </h3>
-
-                    <data class="card-price" value="170.85"
-                      >$170.85 <del>QAR 140</del></data
-                    >
+                    <data class="card-price" value="160.85">QAR 140</data>
                   </div>
                 </div>
               </li>
@@ -625,7 +636,7 @@
                 <div class="product-card" tabindex="0">
                   <figure class="card-banner">
                     <img
-                      src="./assets/images/product-5.jpg"
+                      src="./assets/images/5.jpg"
                       width="312"
                       height="350"
                       loading="lazy"
@@ -692,12 +703,11 @@
 
                   <div class="card-content">
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Women</a>
+                      <a href="#" class="card-cat-link">Men</a>
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Nike Air Max 270 SE</a>
+                      <a href="#"> PUMA Sneakers Puma Up</a>
                     </h3>
 
                     <data class="card-price" value="120.85">QAR 140</data>
@@ -709,7 +719,7 @@
                 <div class="product-card" tabindex="0">
                   <figure class="card-banner">
                     <img
-                      src="./assets/images/product-6.jpg"
+                      src="./assets/images/6.jpg"
                       width="312"
                       height="350"
                       loading="lazy"
@@ -774,12 +784,11 @@
 
                   <div class="card-content">
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Women</a>
+                      <a href="#" class="card-cat-link">Men</a>
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Adidas Sneakers Shoes</a>
+                      <a href="#">Duramo Sl Wide Shoes</a>
                     </h3>
 
                     <data class="card-price" value="100.85">QAR 140</data>
@@ -791,7 +800,7 @@
                 <div class="product-card" tabindex="0">
                   <figure class="card-banner">
                     <img
-                      src="./assets/images/product-7.jpg"
+                      src="./assets/images/7.jpg"
                       width="312"
                       height="350"
                       loading="lazy"
@@ -856,12 +865,11 @@
 
                   <div class="card-content">
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Sports</a>
+                      <a href="#" class="card-cat-link">Men</a>
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Nike Basketball shoes</a>
+                      <a href="#"> PUMA Shuffle</a>
                     </h3>
 
                     <data class="card-price" value="120.85">QAR 140</data>
@@ -873,7 +881,7 @@
                 <div class="product-card" tabindex="0">
                   <figure class="card-banner">
                     <img
-                      src="./assets/images/product-8.jpg"
+                      src="./assets/images/8.jpg"
                       width="312"
                       height="350"
                       loading="lazy"
@@ -943,7 +951,7 @@
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Simple Fabric Shoe</a>
+                      <a href="#">PUMA Electron E</a>
                     </h3>
 
                     <data class="card-price" value="100.85">QAR 140</data>
@@ -1482,8 +1490,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
 
@@ -1497,8 +1509,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
 
@@ -1512,8 +1528,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
 
@@ -1527,8 +1547,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
 
@@ -1542,8 +1566,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
 
@@ -1557,8 +1585,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
 
@@ -1572,8 +1604,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
 
@@ -1587,8 +1623,12 @@
                 class="insta-post-banner image-contain"
               />
 
-              <a href="#" class="insta-post-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a
+                href="https://wa.me/97452005623"
+                target="new"
+                class="insta-post-link"
+              >
+                <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
             </li>
           </ul>
@@ -1600,8 +1640,7 @@
       - #CONTACT US
     -->
     <section class="contact" id="contact">
-      <h1 class="heading"><span>Contact</span> us</h1>
-
+      <br /><br />
       <div class="row">
         <div class="map">
           <iframe
@@ -1616,7 +1655,7 @@
         </div>
 
         <form action="">
-          <h1 class="heading" style="color: #e0e1dd">Get in touch</h1>
+          <h1 class="heading" style="color: #e0e1dd">Contact Us</h1>
           <div class="inputBox">
             <span class="fas fa-user"></span>
             <input type="text" placeholder="name" />
@@ -1646,12 +1685,12 @@
           href="https://www.facebook.com/profile.php?id=61561941742228"
           class="fab fa-facebook-f"
         ></a>
-        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-tiktok"></a>
         <a
           href="https://www.instagram.com/__brand_it/"
           class="fab fa-instagram"
         ></a>
-        <a href="#" class="fab fa-linkedin"></a>
+
         <a href="https://wa.me/97452005623" class="fab fa-whatsapp"></a>
       </div>
 
@@ -1869,7 +1908,10 @@
       data-go-top
       target="new"
     >
-      <ion-icon name="logo-whatsapp"></ion-icon>
+      <ion-icon
+        name="logo-whatsapp"
+        style="width: 48px; height: 48px"
+      ></ion-icon>
     </a>
     <!-- 
     - custom js link
